--- a/projects/chat_standort_6_verarsche/index.html
+++ b/projects/chat_standort_6_verarsche/index.html
@@ -12,7 +12,9 @@
         <div class="chat-history"></div>
         <form>
             <input type="text" name="content">
-            <button type="submit">send</button>
+            <button type="submit" id="send-button">send</button>
+            <button type="button" id="img-button">img</button>
+            <input type="file" id="image-upload" accept="image/*" style="display:none">
         </form>
     </main>
     <script src="index.js"></script>
