--- a/projects/chat_standort_7/index.html
+++ b/projects/chat_standort_7/index.html
@@ -17,6 +17,6 @@
             <input type="file" id="image-upload" accept="image/*" style="display:none">
         </form>
     </main>
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
