--- a/projects/chat_standort_7.2/index.html
+++ b/projects/chat_standort_7.2/index.html
@@ -14,8 +14,16 @@
             <input type="text" name="content">
             <button type="submit" id="send-button">send</button>
             <button type="button" id="img-button">img</button>
+            <button type="button" id="camera-button">cam</button>
             <input type="file" id="image-upload" accept="image/*" style="display:none">
         </form>
+        <div id="camera-container" style="display:none">
+            <video id="camera-stream" autoplay playsinline></video>
+            <div class="camera-controls">
+                <button id="take-photo">Capture</button>
+                <button id="cancel-photo">Cancel</button>
+            </div>
+        </div>
     </main>
     <script type="module" src="index.js"></script>
 </body>
