--- a/projects/chat_standort_7.3/index.html
+++ b/projects/chat_standort_7.3/index.html
@@ -21,6 +21,7 @@
             <video id="camera-stream" autoplay playsinline></video>
             <div class="camera-controls">
                 <button id="take-photo">Capture</button>
+                <button id="toggle-camera">Flip</button>
                 <button id="cancel-photo">Cancel</button>
             </div>
         </div>
