--- a/projects/chat_standort_7.3_handy_osmr_animal/index.html
+++ b/projects/chat_standort_7.3_handy_osmr_animal/index.html
@@ -12,8 +12,17 @@
         <div class="chat-history"></div>
         <form>
             <input type="text" name="content">
-            <button type="submit" id="send-button">send</button>
-            <button type="button" id="img-button">img</button>
+            <div class="button-container">
+                <button type="submit" id="send-button">send</button>
+                <button type="button" id="img-button">img</button>
+                <button type="button" id="animal-button">Animal</button>
+            </div>
+            <div class="animal-selector" style="display:none">
+                <button type="button" class="animal-option" data-animal="ant">Ameise</button>
+                <button type="button" class="animal-option" data-animal="bird">Vogel</button>
+                <button type="button" class="animal-option" data-animal="lion">Löwe</button>
+                <button type="button" class="animal-option" data-animal="mensch">Mensch</button>
+            </div>
             <input type="file" id="image-upload" accept="image/*" style="display:none">
         </form>
     </main>
