--- a/index.html
+++ b/index.html
@@ -45,18 +45,17 @@
 		<h3>REFLECTION</h3>
 		<div class="text">
 			<h4>WHAT IS A LLM ?</h4>
-			<p></p>
+			<p>An LLM (Large Language Model) is an advanced AI system trained on large-scale text data using the Transformer architecture, which allows it to process and generate human-like language. It works by analyzing the context of a given input and predicting the most likely next word or sequence of words. Through this process, it can generate coherent text, answer questions, translate languages, and more. While it captures complex patterns and relationships in language, it does not possess real understanding or consciousness.</p>
 			<h4>TASK</h4>
-			<p></p>
+			<p>This project explores the creation of a speculative, beautiful, and meaningful web-based experience that interacts with users through a Large Language Model (LLM). Users provide inputs—text, images, location, or other data—which the model transforms into unexpected and poetic responses. In the first phase, different LLMs are explored, small prototypes are built, and prompt engineering techniques are practiced. The second phase focuses on developing the core concept and interaction flow. Finally, the project is refined visually, tested with real users, and polished into a playful, thoughtful digital experience.</p>
 			<h4>IDEA</h4>
 			<p></p>
-			<h4>IMPLEMENTATION</h4>
-			<p></p>
 		</div>
+		
 		</section>
 
 		<section class="REFLECTION">
-			<a href="">
+			<a href="projects/chat_standort_7.3_handy_osmr_animal_2_local">
 				<section class="NAVWEB">
 					<h2 id="MENU" class="navtext">LLM CHAT</h2>
 				</section>
