--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 			<h4>IDEA</h4>
 			<p></p>
 		</div>
-		
+
 		</section>
 
 		<section class="REFLECTION">
-			<a href="projects/chat_standort_7.3_handy_osmr_animal_2_local">
+			<a href="https://hbk-bs.github.io/text-the-universal-interface-ivohartwig/projects/chat_standort_7.3_handy_osmr_animal_2_local/">
 				<section class="NAVWEB">
 					<h2 id="MENU" class="navtext">LLM CHAT</h2>
 				</section>
