--- a/projects/chat_standort_7.3_handy_osmr_animal_2_local/index.html
+++ b/projects/chat_standort_7.3_handy_osmr_animal_2_local/index.html
@@ -16,6 +16,7 @@
                 <button type="submit" id="send-button">send</button>
                 <button type="button" id="img-button">img</button>
                 <button type="button" id="animal-button">Animal</button>
+                <button type="button" id="clear-history-button">🗑️</button>
             </div>
             <div class="animal-selector" style="display:none">
                 <button type="button" class="animal-option" data-animal="ant">Ameise</button>
