--- a/projects/chat_standort_7.3_handy_osmr_animal_2_local Kopie/index.html
+++ b/projects/chat_standort_7.3_handy_osmr_animal_2_local Kopie/index.html
@@ -21,8 +21,7 @@
             <div class="animal-selector" style="display:none">
                 <button type="button" class="animal-option" data-animal="ant">Ameise</button>
                 <button type="button" class="animal-option" data-animal="bird">Vogel</button>
-                <button type="button" class="animal-option" data-animal="lion">Löwe</button>
-                <button type="button" class="animal-option" data-animal="mensch">Mensch</button>
+                <button type="button" class="animal-option" data-animal="default">Back to human</button>
             </div>
             <input type="file" id="image-upload" accept="image/*" style="display:none">
         </form>
