--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		</section>
 
 		<section class="REFLECTION">
-			<a href="https://hbk-bs.github.io/text-the-universal-interface-ivohartwig/projects/chat_standort_7.3_handy_osmr_animal_2_local/">
+			<a href="https://hbk-bs.github.io/text-the-universal-interface-ivohartwig/projects/chat_standort_7.3_handy_osmr_animal_2_local.2/">
 				<section class="NAVWEB">
 					<h2 id="MENU" class="navtext">LLM CHAT</h2>
 				</section>
